Some things work :)

--- a/SOA_lab3_5/web/index.xhtml
+++ b/SOA_lab3_5/web/index.xhtml
@@ -57,8 +57,19 @@
                </c:otherwise>
             </c:choose>
          </h:panelGroup>
-         <h:commandButton value="Podsumowanie" action="step2"/>
-         <ui:include src="commercial.xhtml"/>
+         <h:commandButton value="Dalej" action="step2"/>
+
+      </h:form>
+      <br/><br/>
+      <h:form>
+         <h:outputLink value="#{commercials.getRandomUrl()}">
+            <f:ajax event="click" immediate="true" listener="#{commercials.clickedCommercial}"/>
+            <h:graphicImage value="#{commercials.getRandomImage()}"/>
+         </h:outputLink>
+         <h:outputText id="counter" value="#{commercials.current.counter}"/>
+         <h:commandLink action="#{commercials.clickedCom()}">
+            <h:graphicImage value="#{commercials.getRandomImage()}"/>
+         </h:commandLink>
       </h:form>
    </h:body>
 </html>
